traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Snake:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur) {
  ^Snake:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^