traversal.snake.Snake.scala.code
override def run() {
  while (!finale()) {
    if (estFaceMur) {
    	mur()
  } else {
    	avance()
  }
  }
}




def mur(): {
  gauche()
  if (estFaceMur) {
    gauche()
    if (estFaceMur) {
      gauche()
      if (estFaceMur) {
        finale()
      }
    }
  }
}

def finale(): Boolean {
  return true
}